packages/cmk-frontend/src/themes/facelift/scss/_main.scss
/* ... */
.italic {
  font-style: italic;
}

// Sweetalert2
// JS library used for confirm dialogs and success/error msg popups
// (see the "Swal" call sites in our typescript code)
div.swal2-popup {
  background-color: $bg-color-secondary;

  div.swal2-icon {
    border-color: $success-dimmed;
    color: $success-dimmed;
  }

  h2.swal2-title,
  div.swal2-html-container {
    color: $font-color;
  }

  div.swal2-html-container {
    white-space: pre-line;
  }

  button.swal2-confirm {
    background-color: $success-dimmed;
  }
}

svg text {
  fill: $font-color;
}

/* Hide native scrollbar when Vue components handle scrolling */
body.main div#main_page_content.vue-scrolling {
  overflow: hidden;
  height: 100%;
  padding-right: 0;
  padding-bottom: 0;

  > * {
    height: 100%;
    display: block;

    > .cmk-vue-app {
      height: 100%;
      display: block;
    }
  }
}

